# inv-vmware-opa

./: .dockerignore  .env.example  .env.full  .env.slim  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECK_SCHEMA_VERSION.md  DASHBOARD.md  DOCKER.md  Dockerfile  Dockerfile.full  README.md  REPLICATION_DURATION_MITIGATION_PLAN.md  SCHEMA_CLI_COMMANDS.md  SCHEMA_CLI_UPDATE_SUMMARY.md  SCHEMA_VERSION_CONSOLIDATION.md  SECURITY.md  TECHNICAL_DEBT_REVIEW.md  TESTING_SUMMARY.md  app.py  docker-build-all.sh  docker-build.sh  docker-compose.yml  init_database.py  main.py  mapping.json  migrate_database.py  migrate_scenarios_resources.py  mkdocs.yml  pyproject.toml  pytest.ini  sbom.json  screenshot-cli
.github/workflows/: docs.yml
.streamlit/: config.toml
configs/: data_explorer.json
docs/: API-ENDPOINTS.md  BETA-FEATURES.md  COMPLETE_PROJECT_SUMMARY.md  DOCKER.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  PAGES-QUICK-REFERENCE.md  PDF_CHARTS_GUIDE.md  PDF_EXPORT.md  PHASE_3_SUMMARY.md  PYPROJECT_FIXES.md  PYPROJECT_PHASE2_SUMMARY.md  PYPROJECT_PHASE3_SUMMARY.md  QUICK_REFERENCE.md  README-UPDATE-SUMMARY.md  README.md  STREAMLIT_PHASE1_IMPLEMENTATION.md  STREAMLIT_TECHNICAL_DEBT.md  TECHNICAL_DEBT_REVIEW.md  TEST_COVERAGE_REPORT.md  UI_ENHANCEMENTS.md  changelog.md  data-model.md  index.md
docs/architecture/: PYGWALKER_EVALUATION.md  STREAMLIT_TIMELINE_EVALUATION.md  WEBASSEMBLY_EVALUATION_PLAN.md
docs/archive/: HIGH_PRIORITY_IMPLEMENTATION_REVIEW.md  IMPROVEMENTS_SUMMARY.md  MEDIUM_PRIORITY_COMPLETION_STATUS.md  MEDIUM_PRIORITY_IMPLEMENTATION_REVIEW.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PYPROJECT_ENHANCEMENTS.md  README.md  TECHNICAL_DEBT_IMPLEMENTATION_SUMMARY.md
docs/design/: labelling-schema-review.md
docs/development/: CONTRIBUTING.md  build-report.md  docker-compose-variants.md  docker-optimization-results.md  docker-optimization.md  docker-packages-inventory.md  docker-variants.md  docker-versioning.md  pipx-docker-analysis.md  pygwalker-gcc-dependency.md  wheel-build-evaluation.md
docs/export/: Architecture_Documentation.docx  Changelog_Documentation.docx  Development_Documentation.docx  Features_Documentation.docx  Getting-Started_Documentation.docx  Home_Documentation.docx  Migration_Documentation.docx  Reference_Documentation.docx  User-Guide_Documentation.docx
docs/features/: DASHBOARD_TESTING.md  DATA_EXPLORER.md  MULTI_TARGET_MIGRATION.md  PDF_ENHANCED_FEATURES.md  QUERY-PARAMETER-NAVIGATION.md  anonymization-fields.md  anonymization.md  column-mapping-changelog.md  excel-column-mapping.md
docs/getting-started/: QUICK_REFERENCE.md  QUICK_START_v1_4_0.md  installation.md  quickstart.md
docs/migration/: MIGRATION_NOTES.md  MIGRATION_NOTES_v1_4_0.md
docs/tools/: AUTO-COMMAND-CENTRALIZATION.md  SCREENSHOT-TOOL-URI-ENHANCEMENT.md  SCREENSHOT-TOOL-USAGE.md  SCREENSHOT_TOOL.md
docs/user-guide/: IMAGES-INTEGRATION.md  README.md  backup-restore.md  cli-commands.md  dashboard.md  pdf-export.md  visual-guide.md
licenses/: README.md  blinker-1.9.0.txt  botocore-1.40.59.txt  certifi-2025.10.5.txt  cffi-2.0.0.txt  click-8.3.0.txt  defusedxml-0.7.1.txt  ghp-import-2.1.0.txt  libsass-0.23.0.txt  licenses.json  lxml-6.0.2.txt  markupsafe-3.0.3.txt  matplotlib-3.10.7.txt  mkdocs-1.6.1.txt  mkdocs-git-revision-date-localized-plugin-1.4.7.txt  mkdocs-material-9.6.22.txt  py-serializable-2.1.0.txt  pyarrow-22.0.0.txt  pycparser-2.23.txt  pyparsing-3.2.5.txt  pyphen-0.17.2.txt  pyyaml-6.0.3.txt  rpds-py-0.28.0.txt  smmap-5.0.2.txt  sortedcontainers-2.4.0.txt  streamlit-camera-input-live-0.2.0.txt  streamlit-faker-0.0.4.txt  streamlit-image-coordinates-0.4.0.txt  streamlit-vertical-slider-2.5.5.txt  tenacity-9.1.2.txt  tomli-2.3.0.txt  tomlkit-0.13.3.txt  tzlocal-5.3.1.txt  watchdog-6.0.0.txt
licenses/direct/: mkdocs-mermaid2-plugin-1.2.3.txt  mkdocs-with-pdf-0.9.3.txt  openpyxl-3.1.5.txt  pandas-2.3.3.txt  pillow-11.3.0.txt  plotly-6.3.1.txt  pytest-8.4.2.txt  pytest-benchmark-5.2.0.txt  pytest-cov-7.0.0.txt  pytest-faker-2.0.0.txt  pytest-mock-3.15.1.txt  pytest-timeout-2.4.0.txt  pytest-xdist-3.8.0.txt  reportlab-4.4.4.txt  sqlalchemy-2.0.44.txt  streamlit-1.50.0.txt  streamlit-extras-0.7.8.txt  tabulate-0.9.0.txt  xlsxwriter-3.2.9.txt
licenses/transitive/: altair-5.5.0.txt  altex-0.2.0.txt  arrow-1.4.0.txt  asn1crypto-1.5.1.txt  attrs-25.4.0.txt  babel-2.17.0.txt  backrefs-5.9.txt  beautifulsoup4-4.14.2.txt  boolean-py-5.0.txt  boto3-1.40.59.txt  brotli-1.1.0.txt  cachetools-6.2.1.txt  chardet-5.2.0.txt  charset-normalizer-3.4.4.txt  cloudpickle-3.1.1.txt  colorama-0.4.6.txt  contourpy-1.3.2.txt  coverage-7.11.0.txt  cryptography-46.0.3.txt  cssselect2-0.8.0.txt  cycler-0.12.1.txt  cyclonedx-bom-7.2.0.txt  cyclonedx-python-lib-11.4.0.txt  editorconfig-0.17.1.txt  entrypoints-0.4.txt  et-xmlfile-2.0.0.txt  exceptiongroup-1.3.0.txt  execnet-2.1.1.txt  faker-37.12.0.txt  favicon-0.7.0.txt  filelock-3.20.0.txt  fonttools-4.60.1.txt  fqdn-1.5.1.txt  gitdb-4.0.12.txt  gitpython-3.1.45.txt  htbuilder-0.9.0.txt  idna-3.11.txt  iniconfig-2.3.0.txt  isoduration-20.11.0.txt  jinja2-3.1.6.txt  (+71 more)
migrations/: 001_add_labelling_tables.sql  002_add_migration_planning_tables.sql  add_replication_parameters_v1_4_0.sql  apply_migration.py
pages/: folder_analysis.py  infrastructure.py  overview.py  resources.py
scripts/: add_indexes.py  collect_licenses.py  extract_license_files.py  migrate_scenarios_costs.py  purge_file_from_history.sh  test_replication_duration.py  verify_licenses.py
src/: __init__.py  cli.py  loader.py  models.py  report_generator.py
src/commands/: anonymize.py  label.py
src/dashboard/: __init__.py  app.py
src/models/: __init__.py  base.py  migration_target.py  schema_version.py  vmware.py
src/services/: anonymization_service.py  backup_service.py  (+4 more)
tests/: README.md  test_backup_service.py  test_backup_service_unit.py  test_cli_label.py  test_column_mapper.py  test_dashboard_data.py  test_label_service.py  test_loader.py  test_models.py  test_schema_cli.py
tools/: README.md  requirements-screenshots.txt  screenshot_cli.py  setup.py
(+39 files in other folders)
