[project]
name = "inv-vmware-opa"
version = "0.1.0"
description = "VMware inventory management CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "xlsxwriter>=3.2.0",
    "streamlit-extras>=0.7.8",
    "watchdog>=6.0.0",
    "reportlab>=4.4.4",
    "pillow>=11.3.0",
    "matplotlib>=3.10.7",
]

[project.scripts]
vmware-inv = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["dashboard/*.py", "dashboard/pages/*.py"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.22",
    "mkdocs-with-pdf>=0.9.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
